[project]
name = "openexr-tools"
version = "0.3.1"
description = "Tools for working with OpenEXR image files."
authors = [
    { name = "Alex Braun", email = "alexander.g.braun@gmail.com" },
]
readme = "README.md"
license = "MIT"
keywords = [
    "OpenEXR",
    "EXR",
    "VFX",
    "openexr",
    "exr",
    "vfx",
    "computer-vision",
    "cv",
    "image",
    "compositing",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.3",
    "lunchbox>=0.3.3",
    "numpy",
]

[project.urls]
repository = "https://github.com/thenewflesh/openexr-tools"
documentation = "https://thenewflesh.github.io/openexr-tools"

[project.scripts]
openexr-tools = "openexr_tools.command:main"

[project.optional-dependencies]

[tool.pdm.dev-dependencies]
lab = [
    "cufflinks",
    "jupyterlab-git>=0.39.3",
    "jupyterlab-henanigans>=0.2.2",
    "jupyterlab-sublime",
    "jupyterlab",
    "rolling-pin>=0.9.3",
]
dev = [
    "m2r2",
    "sphinx-autodoc-typehints>=1.22",
    "sphinx-rtd-theme",
    "sphinx>=5.3.0",
    "sphinxcontrib-jquery>=4.1",
    "toml>=0.10.2",
]
test = [
    "flake8",
    "mypy",
    "pillow",
    "pytest-cov",
    "pytest-forked",
    "pytest-xdist",
    "pytest",
]

[tool.pytest.ini_options]
cache_dir = "/home/ubuntu/.pytest_cache"
filterwarnings = [
    "ignore:The --rsyncdir command line argument",
]
markers = [
    "flaky:Flaky test",
]

[tool.coverage.report]
show_missing = true
omit = [
    "*/__init__.py",
    "*/*_test_base.py",
    "*/*_test.py",
    "*/*_tests.py",
    "*/cli.py",
    "*/command.py",
    "*/mock_*.py",
    "*/conftest.py",
]

[tool.mypy]
cache_dir = "/home/ubuntu/.mypy_cache"
python_version = "3.10"
ignore_missing_imports = true
warn_no_return = false
pretty = true
warn_unused_ignores = true

[build-system]
requires = [
    "pdm-pep517>=1.0.0",
]
build-backend = "pdm.pep517.api"
